--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "discord.js": "^14.8.0",
+    "@discordjs/voice": "^0.15.0",
+    "discord.js": "^13.14.0",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0",
     "soundcloud-downloader": "^1.0.0",
