--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "discord.js": "^13.14.0",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0",
+    "libsodium-wrappers": "^0.7.11",
     "soundcloud-downloader": "^1.0.0",
     "ytdl-core": "^4.11.2"
   }
